[workspace]
resolver = "2"
members = [
    "ore-lib",
    "ore-jni-lib",
]

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3           # Optimize for binary size. You can use "3" for full optimizations if binary size isn't an issue.
codegen-units = 1       # Better optimization with fewer codegen units
lto = true              # Enable Link Time Optimization (LTO)
debug = false           # Disable debug info to reduce binary size
panic = 'abort'         # Reduces the binary size further by not including unwinding information
rpath = false
incremental = false
overflow-checks = false