[package]
name = "ore-jni-lib"
version = "0.0.8"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "ore_jni_lib"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
ore-lib = { path = "../ore-lib" }
jni = "0.21.1"
tokio = "1.35.1"
either = "1.13.0"
solana-client = "^1.18"

[build-dependencies]
cbindgen = "0.27.0"
